@@ -1,3 +1,9 @@
+2006-06-19  Paul Eggert  <eggert@cs.ucla.edu>
+
+	* lib-ignore.m4 (gl_IGNORE_UNUSED_LIBRARIES): Prefer binutils's
+	--as-needed option if available.  Problem reported by Albert Chin in
+	<http://lists.gnu.org/archive/html/bug-gnulib/2006-06/msg00114.html>.
+
 2006-06-18  Jim Meyering  <jim@meyering.net>
 
 	Test for a bug that causes glibc's getcwd to suffer a failed assertion.
